fix: polish up the login/installation page (adjusted spacing/margins)
change indent to 4 spaces

--- a/nextcloud/usr/share/webapps/nextcloud/themes/docker-cloud/core/css/server.css
+++ b/nextcloud/usr/share/webapps/nextcloud/themes/docker-cloud/core/css/server.css
@@ -1,76 +1,84 @@
 :root {
-  --image-background: no;
+    --image-background: no;
 }
 
 body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: var(--color-main-background-blur);
-  backdrop-filter: var(--filter-background-blur, none);
+    content: "";
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: var(--color-main-background-blur);
+    backdrop-filter: var(--filter-background-blur, none);
 }
 
-#body-login .wrapper,
+#body-login .wrapper {
+    z-index: 1;
+    color: var(--color-main-text);
+    margin-top: unset;
+    margin-bottom: auto;
+}
+
 #body-login footer {
-  z-index: 1;
-  color: var(--color-main-text);
+    z-index: 1;
+    color: var(--color-main-text);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 #body-public.layout-base
-  div#content.app-public
-  div.body-login-container.update {
-  width: auto !important;
-  height: fit-content !important;
-  margin: 7% auto 0 auto;
+div#content.app-public
+div.body-login-container.update {
+    width: auto !important;
+    height: fit-content !important;
+    margin: 7% auto 0 auto;
 }
 
 header#header {
-  height: var(--header-height) !important;
-  background-color: var(
+    height: var(--header-height) !important;
+    background-color: var(
     --color-background-plain,
     var(--color-main-background)
-  ) !important;
+    ) !important;
 }
 
 #header .logo {
-  background-image: url("../img/logo.svg");
+    background-image: url("../img/logo.svg");
 }
 
 #body-login #header .logo {
-  filter: drop-shadow(0 0 5px var(--color-box-shadow));
+    filter: drop-shadow(0 0 5px var(--color-box-shadow));
 }
 
 #content,
 #content-vue {
-  width: 100% !important;
-  height: calc(
+    width: 100% !important;
+    height: calc(
     100% - env(safe-area-inset-bottom) - var(--header-height)
-  ) !important;
-  border-radius: 0px !important;
-  margin: var(--header-height) 0 0 0 !important;
+    ) !important;
+    border-radius: 0px !important;
+    margin: var(--header-height) 0 0 0 !important;
 }
 
 #app-navigation-vue,
 #app-navigation,
 #app-navigation:not(.vue) {
-  background: transparent;
-  backdrop-filter: unset;
-  border-radius: 0px !important;
+    background: transparent;
+    backdrop-filter: unset;
+    border-radius: 0px !important;
 }
 
 @media only screen and (max-width: 1024px) {
-  #app-navigation-vue,
-  #app-navigation,
-  #app-navigation:not(.vue) {
-    background: var(--color-main-background);
-    box-shadow: -5px 0px 15px 0px black;
-  }
-  .app-navigation--close {
-    box-shadow: none !important;
-  }
+    #app-navigation-vue,
+    #app-navigation,
+    #app-navigation:not(.vue) {
+        background: var(--color-main-background);
+        box-shadow: -5px 0px 15px 0px black;
+    }
+    .app-navigation--close {
+        box-shadow: none !important;
+    }
 }
 
 /* fulltextsearch settings page fixes  */
@@ -80,40 +88,40 @@ input#elasticsearch_host,
 input#elasticsearch_index,
 input#analyzer_tokenizer,
 input#files_size {
-  background: var(--color-main-background) !important;
-  color: var(--color-text-lighter) !important;
+    background: var(--color-main-background) !important;
+    color: var(--color-text-lighter) !important;
 }
 
 /* app-dashboard header text color fix */
 div#app-dashboard > h2 {
-  color: var(--color-main-text) !important;
+    color: var(--color-main-text) !important;
 }
 
 /* mail app */
 div.splitpanes__pane:nth-child(1) {
-  min-width: 400px !important;
+    min-width: 400px !important;
 }
 
 .list-item .list-item-content__details {
-  justify-content: center !important;
-  align-items: center !important;
+    justify-content: center !important;
+    align-items: center !important;
 }
 
 div.mail-message-body.mail-message-body-html {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
-  gap: 10px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    gap: 10px;
 }
 
 div.html-message-body {
-  margin: 5px 10px !important;
-  border-radius: var(--border-radius-large);
+    margin: 5px 10px !important;
+    border-radius: var(--border-radius-large);
 }
 
 div#message-container,
 iframe.message-frame {
-  border-radius: var(--border-radius-large);
+    border-radius: var(--border-radius-large);
 }
 
 /* files app */
